# maccepa_manipulator

./: .gitignore  README.md
Control/: PD_Controller.py  generate_maccepa_data.py  log_interpreter.m
baker_plugin/: CMakeLists.txt  package.xml
baker_plugin/include/: baker_plugin.h
baker_plugin/src/: baker_plugin.cpp
gazebo_joint_state_publisher_plugin/: CMakeLists.txt  package.xml
gazebo_joint_state_publisher_plugin/include/: gazebo_joint_state_publisher_plugin.h
gazebo_joint_state_publisher_plugin/src/: gazebo_joint_state_publisher_plugin.cpp
maccepa_description/: CMakeLists.txt  README.md  package.xml
maccepa_description/gazebo/: gazebo.urdf.xacro  gazebo_baker.urdf.xacro
maccepa_description/robots/: maccepa_baker.urdf.xacro  maccepa_testbench.urdf.xacro
maccepa_description/stl/: camdisk.stl
maccepa_description/urdf/: helper_macros.urdf.xacro  materials.xacro
maccepa_description/urdf/basket/: basket.urdf.xacro
maccepa_description/urdf/brick/: brick.urdf.xacro
maccepa_description/urdf/camdisk/: maccepa_camdisk.urdf.xacro
maccepa_description/urdf/link/: maccepa_link.urdf.xacro
maccepa_gazebo/: CMakeLists.txt  README.md  package.xml
maccepa_gazebo/config/: gazebo_control.yaml
maccepa_gazebo/launch/: maccepa.launch  maccepa_baker.launch
maccepa_gazebo/scripts/: adapter.py
maccepa_gazebo/worlds/: maccepa.world
maccepa_hardware/encoders/arduino/encoders/: encoders.ino
maccepa_hardware/encoders/launch/: encoders.launch
maccepa_hardware/encoders/scripts/: encoder_data_from_arduino.py  encoder_to_joint_state.py
maccepa_hardware/motors/: CMakeLists.txt  package.xml
maccepa_hardware/motors/include/motors/: dynamixel_control.h
maccepa_hardware/motors/launch/: motors.launch
maccepa_hardware/motors/src/: dynamixel_control.cpp
maccepa_launch/: CMakeLists.txt  package.xml
maccepa_launch/launch/: maccepa.launch
maccepa_plugin/: CMakeLists.txt  package.xml
maccepa_plugin/include/: maccepa_plugin.h
maccepa_plugin/src/: maccepa_plugin.cpp
