<?xml version="1.0"?>
<package>
  <name>maccepa_description</name>
  <version>1.0.0</version>
  <description>The maccepa testbench description package</description>
  
  <maintainer email="s.golousov@innopolis.ru">asQue</maintainer>
  <license>Commercial</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>



