<?xml version="1.0"?>
<package>
  <name>maccepa_plugin</name>
  <version>1.0.0</version>
  <description>The maccepa_plugin package</description>
  <maintainer email="s.golousov@innopolis.ru">asQue</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>
</package>
